Fixed h1 spacing

--- a/client/src/components/LandingPage/index.scss
+++ b/client/src/components/LandingPage/index.scss
@@ -4,7 +4,8 @@
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
-	align-items: center;
+  align-items: center;
+  width: calc(100vw - 2rem);
 	max-width: 500px;
 	border-radius: 6px;
 	margin-left: auto;
@@ -12,13 +13,12 @@
 	margin-top: 10rem;
 	border: 1px solid #313640;
 	box-shadow: 0 3px 7px $primary;
-	padding: 3rem 2rem 4rem;
+  padding: 3rem 0 4rem;
 	h1 {
 		margin-top: 0;
 		margin-bottom: 2rem;
 	}
 	a {
-		text-decoration: none;
 		border-radius: 6px;
 		border: 1px solid $primary;
 		padding: 1rem 2rem;
